--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "booksearcher",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -14,11 +15,14 @@
   },
   "repository": {
     "type": "git",
-
+    "url": "git+https://github.com/sksmejn/bookSearcher.git"
   },
   "author": "Jonathan",
   "license": "MIT",
-
+  "bugs": {
+    "url": "https://github.com/sksmejn/bookSearcher/issues"
+  },
+  "homepage": "https://github.com/sksmejn/bookSearcher#readme",
   "dependencies": {
     "axios": "^0.21.1",
     "compression": "^1.7.4",
